Fixes header layout wrapping. Fixes iOS native audio redirect issue.

--- a/Chavah.NetCore/wwwroot/css/app/nowPlaying.less
+++ b/Chavah.NetCore/wwwroot/css/app/nowPlaying.less
@@ -184,6 +184,8 @@
             margin-top: 5px;
             margin-bottom: 5px;
             color: @brand-primary;
+            text-wrap: auto;
+            text-wrap-style: balance;
         }
     }
 
